llvm-toolchain-12 (1:12.0.1-21) UNRELEASED; urgency=medium

  [ John Paul Adrian Glaubitz ]
  * Enable GRPC build dependency only on supported targets

 -- John Paul Adrian Glaubitz <glaubitz@physik.fu-berlin.de>  Fri, 13 May 2022 21:10:00 +0200

llvm-toolchain-12 (1:12.0.1-20) unstable; urgency=medium

  * Also install usr/lib/llvm-@LLVM_VERSION@/lib/libRemoteIndexProto.a
    usr/lib/llvm-@LLVM_VERSION@/lib/libRemoteIndexServiceProto.a
    in libclang-X.Y-dev
    (closes: #1004923)

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 13 Feb 2022 14:04:40 +0100

llvm-toolchain-12 (1:12.0.1-19) unstable; urgency=medium

  * Build clangd with GRPC support
    Thanks to Sam McCall for the patch

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 29 Jan 2022 10:17:38 +0100

llvm-toolchain-12 (1:12.0.1-18) unstable; urgency=medium

  * Unbreak llvm-toolchain-12 on buster.
    -fuse-ld=gold wasn't passed to compiler-rt. it was using bfd.
    And binutils shipping in buster has a bug preventing this to work:
    https://github.com/llvm/llvm-project/issues/42339
  * Rename ocaml-nox => ocaml-base (Closes: #1002608)
  * Remove Build-Conflicts: ocaml

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 16 Dec 2021 17:49:22 +0100

llvm-toolchain-12 (1:12.0.1-17) unstable; urgency=medium

  * Rebuild to workaround the coinstallability issue (Closes: #996858)

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 30 Nov 2021 19:32:51 +0100

llvm-toolchain-12 (1:12.0.1-16) unstable; urgency=medium

  [ Erik Maciejewski ]
  * use make variables populated by /usr/share/dpkg/buildflags.mk and remove
    _EXTRA suffix from STAGE_1_ and STAGE_2_ flag vars to improve clarity and
    readability for the multi-stage setup in debian/rules
  * remove some redundant cmake options (options with the same value as their
    default) from, and move PYTHON_EXECUTABLE cmake option to, the cmake
    configure command in debian/rules
  * re-disable fixfilepath in dpkg-buildflags in favor of using the more llvm