@@ -1,3 +1,5 @@
+#!/usr/bin/dh-exec
+
 usr/lib/llvm-@LLVM_VERSION@/include/clang
 usr/lib/llvm-@LLVM_VERSION@/include/clang-c
 usr/lib/llvm-@LLVM_VERSION@/include/clang-tidy
@@ -7,5 +9,5 @@ usr/lib/llvm-@LLVM_VERSION@/lib/libclang-@LLVM_VERSION@*.so
 usr/lib/llvm-@LLVM_VERSION@/lib/libfindAllSymbols.a
 
 # clangd
-usr/lib/llvm-@LLVM_VERSION@/lib/libRemoteIndexProto.a
-usr/lib/llvm-@LLVM_VERSION@/lib/libRemoteIndexServiceProto.a
+[!m68k !sparc64] usr/lib/llvm-@LLVM_VERSION@/lib/libRemoteIndexProto.a
+[!m68k !sparc64] usr/lib/llvm-@LLVM_VERSION@/lib/libRemoteIndexServiceProto.a
